a1/brendan_gordon/TEST_PROGRAMS/invalidtype/hongji_chen/assignFloat2Int.min
var x : int;
var y : float;

y = 10.;

x = y;
print x;
